<resources>
    <string name="app_name">SweetectApp</string>
    <string name="your_food">Guest Your Food</string>
    <string name="take_picture">Take Picture</string>
    <string name="select_picture">Select Picture</string>
    <string name="predicted">Predicted</string>
    <string name="please_select_predict_button_for_showing_your_sugar_and_calories">Please Select Predict Button For Showing Your sugar and Calories</string>
    <string name="food_image">Food Image</string>
    <string name="reselect_retake_food">Reselect / Retake Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_base">Base</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title">Nama Makanan</string>
    <string name="calorie">Kalori</string>
    <string name="submit">Submit</string>
    <string name="delete">Hapus</string>
    <string name="date">Date</string>
    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
    <string name="message_ok">OK</string>
    <string name="cancel">Batal</string>
    <string name="empty">Field can not be blank</string>
    <string name="update">Update</string>
    <string name="change">Ubah</string>
    <string name="add">Tambah</string>
    <string name="save">Simpan</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="added">Satu item berhasil ditambahkan</string>
    <string name="changed">Satu item berhasil diubah</string>
    <string name="deleted">Satu item berhasil dihapus</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="gula">Gula</string>
    <string name="empty_field">Data Kosong</string>
    <string name="history">History</string>
    <string name="galery">Galery</string>
    <string name="txt_welcome">Welcome To Sweetect</string>
    <string name="txt_username">Username</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="lengkung_henle">Lengkung Henle</string>
    <string name="signUp_header">header</string>
    <string name="please_fill_register_form">PLEASE FILL REGISTER FORM</string>
    <string name="type_your_email">Type your Email</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="retype_your_password">Retype Your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered_sign_in">Already Registered , Sign In !</string>


</resources>